force-app/main/default/objects/smagicinteract__Routing_Rule__mdt/smagicinteract__Routing_Rule__mdt.object-meta.xml
<CustomObject>
    <description>It will store the records of routing rule.</description>
    <label>Routing Rule</label>
    <pluralLabel>Routing Rules</pluralLabel>
</CustomObject>