force-app/main/default/objects/smagicinteract__Routing_Rule__mdt/fields/smagicinteract__Condition_String__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Condition_String__c</fullName>
    <description>It will store the condition criteria logic of the rule.</description>
    <inlineHelpText>It will store the condition criteria logic of the rule.</inlineHelpText>
    <label>Condition String</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>