force-app/main/default/objects/smagicinteract__Routing_Rule__mdt/fields/smagicinteract__Created_By__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Created_By__c</fullName>
    <label>Created By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>