force-app/main/default/objects/smagicinteract__Routing_Rule__mdt/fields/smagicinteract__Description__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Description__c</fullName>
    <description>Description of the routing rule.</description>
    <inlineHelpText>Description of the routing rule.</inlineHelpText>
    <label>Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>