force-app/main/default/objects/smagicinteract__Routing_Rule__mdt/fields/smagicinteract__Email_Notification_from__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Email_Notification_from__c</fullName>
    <description>Email Id from which sms will be sent.</description>
    <inlineHelpText>Email Id from which sms will be sent.</inlineHelpText>
    <label>Email Notification from</label>
    <length>255</length>
    <type>Text</type>
</CustomField>