force-app/main/default/objects/smagicinteract__Routing_Rule__mdt/fields/smagicinteract__Fallback_User__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Fallback_User__c</fullName>
    <label>Fallback User</label>
    <length>255</length>
    <type>Text</type>
</CustomField>