force-app/main/default/objects/smagicinteract__Routing_Rule__mdt/fields/smagicinteract__Fields__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Fields__c</fullName>
    <label>Fields</label>
    <length>255</length>
    <type>Text</type>
</CustomField>