force-app/main/default/objects/smagicinteract__Routing_Rule__mdt/fields/smagicinteract__Name__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Name__c</fullName>
    <label>Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>