force-app/main/default/objects/smagicinteract__Routing_Rule__mdt/fields/smagicinteract__Object_Fields_Criteria__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Object_Fields_Criteria__c</fullName>
    <label>Object Fields Criteria</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>