force-app/main/default/objects/smagicinteract__Routing_Rule__mdt/fields/smagicinteract__Priority_Sequence__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Priority_Sequence__c</fullName>
    <description>It will store the priority of the current rule.</description>
    <inlineHelpText>It will store the priority of the current rule.</inlineHelpText>
    <label>Priority Sequence</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>