force-app/main/default/objects/smagicinteract__Routing_Rule__mdt/fields/smagicinteract__SMS_Notification_from__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__SMS_Notification_from__c</fullName>
    <description>SMS Notification from</description>
    <inlineHelpText>SMS Notification from</inlineHelpText>
    <label>SMS Notification from</label>
    <length>255</length>
    <type>Text</type>
</CustomField>