force-app/main/default/objects/smagicinteract__Routing_Rule__mdt/fields/smagicinteract__Status__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Status__c</fullName>
    <description>Pick list   It will indicate the status of rule.</description>
    <inlineHelpText>Pick list   It will indicate the status of rule.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Default</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>